--- a/HWN/index.html
+++ b/HWN/index.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
     <head>
@@ -30,8 +31,8 @@
         <script src="js/rbush.min.js"></script>
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
-        <script src='https://github.com/alikeremince/HWN/blob/121dfee3b9324a14ddf24aad630c4aa21800dd0e/Harzgebiet'></script>
-        <script src="data/Stempelstellen_3.js"></script>
+        <script src="https://github.com/alikeremince/HWN/blob/121dfee3b9324a14ddf24aad630c4aa21800dd0e/Harzgebiet.js"></script>
+        <script src="https://github.com/alikeremince/HWN/blob/121dfee3b9324a14ddf24aad630c4aa21800dd0e/Stempelstellen.js"></script>
        <script>
         var highlightLayer;
         function highlightFeature(e) {
@@ -128,7 +129,7 @@
         });
         bounds_group.addLayer(layer_Harzgebiet);
         map.addLayer(layer_Harzgebiet);
-        function pop_Stempelstellen_3(feature, layer) {
+        function pop_Stempelstellen(feature, layer) {
             layer.on({
                 mouseout: function(e) {
                     for (i in e.target._eventParents) {
@@ -149,11 +150,11 @@
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
-        function style_Stempelstellen_3_0(feature) {
+        function style_Stempelstellen_0(feature) {
             switch(String(feature.properties['Collected'])) {
                 case 'Yes':
                     return {
-                pane: 'pane_Stempelstellen_3',
+                pane: 'pane_Stempelstellen',
                 radius: 6.0,
                 opacity: 1,
                 color: 'rgba(0,0,0,1.0)',
@@ -169,7 +170,7 @@
                     break;
                 case 'No':
                     return {
-                pane: 'pane_Stempelstellen_3',
+                pane: 'pane_Stempelstellen',
                 radius: 6.0,
                 opacity: 1,
                 color: 'rgba(0,0,0,1.0)',
@@ -185,26 +186,26 @@
                     break;
             }
         }
-        map.createPane('pane_Stempelstellen_3');
-        map.getPane('pane_Stempelstellen_3').style.zIndex = 403;
-        map.getPane('pane_Stempelstellen_3').style['mix-blend-mode'] = 'normal';
-        var layer_Stempelstellen_3 = new L.geoJson(json_Stempelstellen_3, {
+        map.createPane('pane_Stempelstellen');
+        map.getPane('pane_Stempelstellen').style.zIndex = 403;
+        map.getPane('pane_Stempelstellen').style['mix-blend-mode'] = 'normal';
+        var layer_Stempelstellen = new L.geoJson(json_Stempelstellen, {
             attribution: '',
             interactive: true,
-            dataVar: 'json_Stempelstellen_3',
-            layerName: 'layer_Stempelstellen_3',
-            pane: 'pane_Stempelstellen_3',
-            onEachFeature: pop_Stempelstellen_3,
+            dataVar: 'json_Stempelstellen',
+            layerName: 'layer_Stempelstellen',
+            pane: 'pane_Stempelstellen',
+            onEachFeature: pop_Stempelstellen,
             pointToLayer: function (feature, latlng) {
                 var context = {
                     feature: feature,
                     variables: {}
                 };
-                return L.circleMarker(latlng, style_Stempelstellen_3_0(feature));
+                return L.circleMarker(latlng, style_Stempelstellen_0(feature));
             },
         });
-        bounds_group.addLayer(layer_Stempelstellen_3);
-        map.addLayer(layer_Stempelstellen_3);
+        bounds_group.addLayer(layer_Stempelstellen);
+        map.addLayer(layer_Stempelstellen);
 		
            var abstract = new L.Control({'position':'topright'});
             abstract.onAdd = function (map) {
@@ -221,8 +222,8 @@
                     this._div.innerHTML = 
 			'<table style="width:100%">\
 			<tr><th colspan="3">Harzer Wandernadel Map of Kerem</th></tr>\
-			<tr><td style="text-align: right;"><img src="data/Stempelstellen_3_Frei1.png"></td><td style="text-align: left;"> Free</td><td rowspan="2" style="text-align: left;">45 / 222</td></tr>\
-			<tr><td style="text-align: right;"><img src="data/Stempelstellen_3_Gesammelt0.png"></td><td style="text-align: left;"> Collected</td></tr>\
+			<tr><td style="text-align: right;"><img src="data/Stempelstellen_Frei1.png"></td><td style="text-align: left;"> Free</td><td rowspan="2" style="text-align: left;">45 / 222</td></tr>\
+			<tr><td style="text-align: right;"><img src="data/Stempelstellen_Gesammelt0.png"></td><td style="text-align: left;"> Collected</td></tr>\
 			</table>';
             };
             abstract.addTo(map);
